--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <!-- Tela de Relatórios -->
     <string name="reports_title">Relatórios</string>
     <string name="overall_progress">Progresso Geral</string>
+    <string name="email_hint">Enter your email</string>
+
 </resources>
